--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible">
-    <title></title>
-    <meta name="description" content="">
+    <title>Soundzee</title>
+    <meta name="description" content="Soundzee">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/base.css">
@@ -55,10 +55,13 @@
 
 <body>
   <header>
-    <svg id="brand" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="90" height="90" viewBox="0 0 90 90" xml:space="preserve"><style>.s0{fill:none;stroke-width:4;stroke:#FFF;}</style><path id="outer" d="M45 18.5c-12.7 0-23 10.3-23 23v12.5 10.5 7.1c5.8 0 10.9-2.8 14.1-7.1H45c12.7 0 23-10.3 23-23S57.7 18.5 45 18.5z" class="s0"/><path d="M56.3 41.6c0-1.7-1.4-3.1-3.1-3.1 -1.7 0-3.1 1.4-3.1 3.1 0 1.7 1.4 3.1 3.1 3.1C54.9 44.7 56.3 43.3 56.3 41.6z" class="s0"/><circle cx="36.8" cy="41.6" r="3.1" class="s0"/></svg>
+    <svg id="brand" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="90" height="90" viewBox="0 0 90 90" xml:space="preserve"><style>.s0{fill:none;stroke-width:4;stroke:#FFF;} .s1{fill:white;stroke-width:0;}</style><path id="outer" d="M45 18.5c-12.7 0-23 10.3-23 23v12.5 10.5 7.1c5.8 0 10.9-2.8 14.1-7.1H45c12.7 0 23-10.3 23-23S57.7 18.5 45 18.5z" class="s0"/><circle cx="54" cy="41" r="3" class="s1"/><circle cx="36" cy="41" r="3" class="s1"/></svg>
   </header>
   <main>
     <button id="soundzee">New recording</button>
   </main>
+  <footer>
+      <button id="library">My Library</button>
+  </footer>
 </body>
 </html>
